# wslDebuggingTest

test/: CMakeLists.txt  toolchain.cmake
test/src/: main.cpp
